# vite-and-openapi-client

./: ReadMe.md
api/: openapi.json  pyproject.toml  tox.ini
api/app/: constants.py  main.py  utils.py
api/app/dependencies/: __init__.py  validate_token.py
api/app/routes/: __init__.py  auth.py  db.json  todos.py
api/app/schemas/: __init__.py  todo.py
front/: .env  index.html  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
front/src/: App.tsx  dummy.test.ts  index.tsx
front/src/client/: index.ts
front/src/client/models/: Body_auth_login.ts  ToDoIn.ts  ToDoOut.ts
front/src/client/services/: AuthService.ts  RootService.ts  TodoService.ts
front/src/components/: AddTodo.tsx  Header.tsx  LoginForm.tsx  ToDoItem.tsx  ToDoList.tsx
