[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Taraslysak <lysak.ipr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
flake8 = "^6.0.0"
black = "^23.1.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
